# simple-todo

./: Cargo.toml  README.md  build.rs  inno setup.iss  resText.slint  styledInputs.slint  styledText.slint  todos.json  ui.slint
src/: api.rs  main.rs  send_req.rs
