[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
cargo-watch = "8.5.3"
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
slint = "1.12.1"
tokio = { version = "1.46.1", features = ["full"] }


[build-dependencies]
slint-build = "1.12.1"


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]